src/objects/Budget_Actuals__c.object
<CustomObject>
    <description>Master - Detail to Budget object and stores actuals info for each budget. Used by Mulesoft for integration as well</description>
    <fields>
        <fullName>As_Of_Date__c</fullName>
        <description>Date for which budget actuals is applicable.</description>
        <inlineHelpText>Date the record was created</inlineHelpText>
        <label>As Of Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>As_Of_Month__c</fullName>
        <inlineHelpText>Month in which the cost was recognized</inlineHelpText>
        <label>As Of Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>As_Of_Year__c</fullName>
        <inlineHelpText>Year in which the cost was recognized</inlineHelpText>
        <label>As Of Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Associated master budget.</description>
        <inlineHelpText>Link to the budget record</inlineHelpText>
        <label>Budget</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Budget__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Budget__c</referenceTo>
        <relationshipLabel>Budget Actuals</relationshipLabel>
        <relationshipName>Budget_Actuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ERP_Cost_Actuals__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Stores ERP Cost Actuals of each budget.</description>
        <inlineHelpText>Cost recognized in ERP in the specified month and year</inlineHelpText>
        <label>ERP Cost Actuals</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERP_Project_Code__c</fullName>
        <label>ERP Project Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Project_ID__c</fullName>
        <label>ERP Project ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Reference__c</fullName>
        <description>This field will be used by Mulesoft for integration with Oracle ERP system.</description>
        <externalId>true</externalId>
        <inlineHelpText>ERP reference ID</inlineHelpText>
        <label>ERP Reference</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ERP_Task_ID__c</fullName>
        <label>ERP Task ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Task_Name__c</fullName>
        <label>ERP Task Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Task_Number__c</fullName>
        <label>ERP Task Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenditure_Type__c</fullName>
        <label>Expenditure Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Budget Actuals</relationshipLabel>
        <relationshipName>Budget_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Project for which budget actuals is being populated in the record.</description>
        <inlineHelpText>Link to the project record</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Budget Actuals</relationshipLabel>
        <relationshipName>Budget_Actuals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recognition_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recognition Period</label>
        <referenceTo>ffrr__RecognitionPeriod__c</referenceTo>
        <relationshipLabel>Budget Actuals</relationshipLabel>
        <relationshipName>Budget_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_formula__c</fullName>
        <formula>DATE( 
IF( 
MONTH(As_Of_Date__c) = 1, YEAR(As_Of_Date__c) - 1, YEAR(As_Of_Date__c)), 

IF( 
MONTH(As_Of_Date__c) = 1, 12, MONTH(As_Of_Date__c)-1), 

1)</formula>
        <label>Start Date (formula)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffrrtemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RM Template</label>
        <referenceTo>ffrr__Template__c</referenceTo>
        <relationshipLabel>Budget Actuals</relationshipLabel>
        <relationshipName>Budget_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Budget Actuals</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>